@@ -1,9 +1,15 @@
 package young.blaybus.domain.job_search.service;
 
+import java.util.ArrayList;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import young.blaybus.api_response.exception.GeneralException;
+import young.blaybus.api_response.status.ErrorStatus;
+import young.blaybus.domain.certificate.Certificate;
+import young.blaybus.domain.certificate.controller.response.ListCertificateDto;
+import young.blaybus.domain.certificate.repository.CertificateRepository;
 import young.blaybus.domain.job_search.JobSearch;
 import young.blaybus.domain.job_search.JobSearchArea;
 import young.blaybus.domain.job_search.JobSearchDay;
@@ -19,43 +25,43 @@ import young.blaybus.util.enums.DayOfWeek;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
 @RequiredArgsConstructor
 public class JobSearchService {
+
   private final JobSearchRepository jobSearchRepository;
   private final MemberRepository memberRepository;
+  private final CertificateRepository certificateRepository;
 
   @Transactional
   public void createJobSearch(CreateJobSearchRequest jobSearchRequest) {
     Member member = memberRepository.findById(jobSearchRequest.memberId())
-            .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 사용자입니다."));
+      .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 사용자입니다."));
 
     JobSearch jobSearch = JobSearch.builder()
-            .member(member)
-            .startTime(LocalTime.parse(jobSearchRequest.startTime()))
-            .endTime(LocalTime.parse(jobSearchRequest.endTime()))
-            .salary(jobSearchRequest.salary())
-            .createdTime(LocalDateTime.now())
-            .build();
+      .member(member)
+      .startTime(LocalTime.parse(jobSearchRequest.startTime()))
+      .endTime(LocalTime.parse(jobSearchRequest.endTime()))
+      .salary(jobSearchRequest.salary())
+      .createdTime(LocalDateTime.now())
+      .build();
 
     List<JobSearchArea> jobSearchAreas = jobSearchRequest.jobSearchAreas().stream()
-            .map(areaRequest -> JobSearchArea.builder()
-                    .address(areaRequest.address())
-                    .jobSearch(jobSearch)
-                    .build())
-            .toList();
+      .map(areaRequest -> JobSearchArea.builder()
+        .address(areaRequest.address())
+        .jobSearch(jobSearch)
+        .build())
+      .toList();
     jobSearch.getJobSearchAreas().addAll(jobSearchAreas);
 
-
     List<JobSearchDay> jobSearchDays = jobSearchRequest.dayList().stream()
-            .map(day -> JobSearchDay.builder()
-                    .day(day)
-                    .jobSearch(jobSearch)
-                    .build())
-            .toList();
+      .map(day -> JobSearchDay.builder()
+        .day(day)
+        .jobSearch(jobSearch)
+        .build())
+      .toList();
     jobSearch.getDayList().addAll(jobSearchDays);
 
     jobSearchRepository.save(jobSearch);
@@ -63,8 +69,8 @@ public class JobSearchService {
 
   @Transactional
   public void updateJobSearch(Long jobSearchId, UpdateJobSearchRequest request) {
-    JobSearch jobSearch=jobSearchRepository.findById(jobSearchId)
-            .orElseThrow(() -> new IllegalArgumentException("구직 정보가 존재하지 않습니다."));
+    JobSearch jobSearch = jobSearchRepository.findById(jobSearchId)
+      .orElseThrow(() -> new IllegalArgumentException("구직 정보가 존재하지 않습니다."));
 
     jobSearch.updateFromDto(request);
 
@@ -73,25 +79,44 @@ public class JobSearchService {
 
   @Transactional
   public DetailJobSearchResponse getJobSearch(String memberId) {
-    JobSearch jobSearch= jobSearchRepository.findByMemberId(memberId)
-            .orElseThrow(()->new IllegalArgumentException("해당 회원의 구직 정보가 존재하지 않습니다."));
+    Member member = memberRepository.findById(memberId)
+      .orElseThrow(() -> new GeneralException(ErrorStatus.NOT_FOUND, "존재하지 않는 회원 ID입니다."));
+
+    JobSearch jobSearch = jobSearchRepository.findByMemberId(memberId)
+      .orElseThrow(() -> new GeneralException(ErrorStatus.NOT_FOUND, "해당 회원의 구직 정보가 존재하지 않습니다."));
 
     List<JobSearchAreaResponse> jobSearchAreaResponses = jobSearch.getJobSearchAreas().stream().map(jobSearchArea ->
       JobSearchAreaResponse.builder().address(jobSearchArea.getAddress()).build()
     ).toList();
 
     List<String> dayList = jobSearch.getDayList().stream()
-            .map(JobSearchDay::getDay)
-            .map(DayOfWeek::toString)
-            .collect(Collectors.toList());
+      .map(JobSearchDay::getDay)
+      .map(DayOfWeek::toString)
+      .toList();
+
+    List<ListCertificateDto> certificateDtoList = new ArrayList<>();
+    List<Certificate> certificateList = certificateRepository.findByMember(member).orElse(new ArrayList<>());
+    for (Certificate certificate : certificateList) {
+      certificateDtoList.add(
+        ListCertificateDto.builder()
+          .type(certificate.getType().getValue())
+          .grade(certificate.getGrade().getValue())
+          .number(certificate.getNumber())
+          .build()
+      );
+    }
 
     return DetailJobSearchResponse.builder()
-            .jobSearchId(jobSearch.getId())
-            .startTime(jobSearch.getStartTime().toString())
-            .endTime(jobSearch.getEndTime().toString())
-            .salary(jobSearch.getSalary())
-            .jobSearchAreas(jobSearchAreaResponses)
-            .dayList(dayList)
-            .build();
+      .jobSearchId(jobSearch.getId())
+      .startTime(jobSearch.getStartTime().toString())
+      .endTime(jobSearch.getEndTime().toString())
+      .salary(jobSearch.getSalary())
+      .jobSearchAreas(jobSearchAreaResponses)
+      .dayList(dayList)
+      .certificateList(certificateDtoList)
+      .career(member.getCareer())
+      .careerPeriod(member.getCareerPeriod())
+      .introduction(member.getIntroduction())
+      .build();
   }
 }
